--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -7,10 +7,12 @@
 }
 
 window#waybar {
-  background-color: #111111;
+  background-color: rgba(20, 20, 20, 0.5);
   transition-property: background-color;
   transition-duration: 0.5s;
+  opacity: 1;
 }
+
 
 window#waybar.hidden {
   opacity: 0.5;
@@ -25,13 +27,13 @@ window#waybar.hidden {
   /* Remove GTK theme values (waybar #1351) */
   min-width: 0;
   /* Fix weird spacing in materia (waybar #450) */
-  box-shadow: inset 0 -3px transparent;
   /* Use box-shadow instead of border so the text isn't offset */
   padding: 5px 5px;
   margin: 5px 8px;
-  border-radius: 0px;
-  background-color: #242424;
+  border-radius: 3px;
+  background-color: rgba(30, 30, 30, 0.5);
   color: #7FA2AC;
+  opacity: 1;
 }
 
 #workspaces button.active {
@@ -40,8 +42,8 @@ window#waybar.hidden {
 }
 
 #workspaces button:hover {
-  box-shadow: inherit;
-  text-shadow: inherit;
+  /* box-shadow: inherit; */
+  /* text-shadow: inherit; */
   color: #1e1e2e;
   background-color: #cdd6f4;
 }
@@ -54,25 +56,28 @@ window#waybar.hidden {
 #custom-mail,
 #battery,
 #backlight,
-#wireplumber,
+#pulseaudio,
 #network,
 #custom-weather,
 #clock,
 #disk,
 #cpu,
+#pulseaudio-slider,
+#backlight-slider,
 #tray {
   border-radius: 4px;
   margin: 6px 3px;
   padding: 6px 6px;
   background-color: #ff00ff;
   color: #181825;
+  opacity: 0.9;
 }
 
 #tray {
   background-color: #1E1E1E;
 }
 
-#wireplumber
+#pulseaudio
 {
   background-color: #8ec07c;
 }
@@ -87,7 +92,7 @@ window#waybar.hidden {
 #backlight-slider slider,
 #pulseaudio-slider slider {
   background-color: transparent;
-  box-shadow: none;
+  /* box-shadow: none; */
 }
 
 #backlight-slider trough,
