--- a/config/waybar/style-background.css
+++ b/config/waybar/style-background.css
@@ -69,7 +69,7 @@ window#waybar {
     border-radius: 50%;
     /* background-color: @base; */
     margin: 0px 0px;
-    padding: 2 6 2 0;
+    padding: 0 10px 0 10px;
 }
 
 #workspaces button:hover * {
