--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -42,12 +42,12 @@
 /* Reset all styles */
 
 * {
-    color: @bg;
+    color: @fg;
     border: 0;
     padding: 0 0;
     font-family: CaskaydiaCoveNerdFont;
 
-    border-radius: 0 10px 10px 0;
+    border-radius: 10px 10px 10px 10px;
     /* font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
     /* font-family: "Hack Nerd Font"; */
     font-size: 18px;
@@ -71,7 +71,7 @@ window#waybar {
     border-radius: 50%;
     /* background-color: @base; */
     margin: 0px 0px;
-    padding: 2 6 2 0;
+    padding: 0 10px 0 10px;
 }
 
 #workspaces button:hover * {
@@ -246,6 +246,7 @@ window#waybar {
 #cpu {
     margin-right: 10px;
     color: @blue;
+    border-radius: 0 10px 10px 0;
     /* border-bottom: 2px solid @sky; */
 }
 
