--- a/config/waybar/style-machiatto.css
+++ b/config/waybar/style-machiatto.css
@@ -10,7 +10,7 @@
  * Keyframes
  * -------------------------------------------------------------------------- */
 
-@import "sober.css";
+@import "machiatto.css";
 
 /*
   Polar Night
@@ -42,25 +42,26 @@
 /* Reset all styles */
 
 * {
-    color: white;
+    color: @lavender;
     border: 0;
     padding: 0 0;
     font-family: CaskaydiaCoveNerdFont;
     /* font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
     /* font-family: "Hack Nerd Font"; */
-    font-size: 16px;
+    font-size: 18px;
     font-weight: bold;
     /* padding-bottom:4px;
       padding-top: 4px; */
     transition: all 0.5s ease;
 }
 
-
 window#waybar {
-  color: transparent;
-  background-color: @crust;
-  opacity: 0.9;
-  border-radius: 0 0 10px 10px;
+    border-bottom: 4px solid shade(@base, 1.1);
+    /* border-radius: 10px; */
+    /* background:#2d2a2e; */
+    /* background-color: rgba(36, 39, 58, 0.85); */
+    /* background-color: rgba(0, 0, 0, 0); */
+    background-color: shade(#1e1e2e, 0.95);
 }
 
 #workspaces button {
@@ -86,11 +87,12 @@ window#waybar {
 }
 
 #workspaces * {
-    color: grey;
+    color: whitesmoke;
 }
 
 #workspaces {
     border-style: solid;
+    background-color: @base;
     opacity: 1;
     border-radius: 10px;
     margin: 8px 0px 8px 8px;
@@ -130,7 +132,7 @@ window#waybar {
 #mpd {
     padding: 5px 8px;
     border-style: solid;
-    /*background-color: transparent;*/
+    background-color: shade(@base, 1.1);
     opacity: 1;
     margin: 8px 0;
 }
@@ -154,6 +156,7 @@ window#waybar {
     border-radius: 10px;
     color: @mauve;
     margin-left: 5px;
+    background-color: rgba(0, 0, 0, 0);
 }
 
 #mpd.2 {
@@ -177,15 +180,15 @@ window#waybar {
 #mpd.2,
 #mpd.3,
 #mpd.4 {
-    background-color: @crust;
-    font-size: 12px;
+    background-color: @base;
+    font-size: 14px;
 }
 
 #custom-swap {
     border-radius: 10px;
-    color: #c0c0c0;
+    color: @base;
     margin-left: 10px;
-    /*background-color: @mauve;*/
+    background-color: @mauve;
 }
 
 #custom-background {
@@ -196,10 +199,10 @@ window#waybar {
 }
 
 #clock {
-    color: white;
+    /* background-color:#a3be8c; */
+    color: @sky;
     border-radius: 10px;
-    margin-right: 40px;
-    margin-left: 10px;
+    margin: 8px 10px;
 }
 
 #backlight {
@@ -294,7 +297,7 @@ window#waybar {
 
 #idle_inhibitor {
     background-color: #ebcb8b;
-   /* color: @base;*/
+    color: @base;
 }
 
 #tray {
@@ -307,6 +310,7 @@ window#waybar {
 #custom-power {}
 
 #custom-launcher {
+    background-color: shade(@base, 1.1);
     color: @mauve;
     border-radius: 0px 15px 0px 0px;
     padding: 5px 10px 5px 10px;
@@ -320,3 +324,99 @@ window#waybar {
     margin-right: 15px;
     padding: 5px 10px;
 }
+
+#window {
+    border-style: hidden;
+    margin-left: 10px;
+    /* margin-top:1px;  
+      padding: 8px 1rem; */
+    margin-right: 10px;
+    color: #eceff4;
+}
+
+#custom-keyboard-layout {
+    color: @peach;
+    /* border-bottom: 2px solid @peach; */
+    border-radius: 0 10px 10px 0;
+    margin-right: 10px;
+}
+
+
+
+/* window#waybar {
+      background: #2d2a2e;
+  }
+  
+  * {
+      color: #c8b9a9;
+      font-family: Ubuntu Mono, sans-serif;
+      font-size: 12px;
+  }
+  
+  #workspaces button.focused {
+      color: #f2e5bc;
+  }
+  
+  #workspaces button {
+      color: #c8b9a9;
+  }
+  
+  .separator {
+      background-color: #c8b9a9;
+  }
+  
+  #mode {
+      color: #ebcb8b;
+  }
+  
+  #clock {
+      color: #a3be8c;
+  }
+  
+  #battery {
+      color: #d8dee9;
+  }
+  
+  #battery.charging {
+      color: #b48ead;
+  }
+  
+  #battery.critical:not(.charging) {
+      color: #bf616a;
+  }
+  
+  #cpu {
+      color: #a3be8c;
+  }
+  
+  #memory {
+      color: #d3869b;
+  }
+  
+  #network {
+      color: #8fbcbb;
+  }
+  
+  #network.disabled {
+      color: #bf616a;
+  }
+  
+  #network.disconnected {
+      color: #bf616a;
+  }
+  
+  #pulseaudio {
+      color: #b48ead;
+  }
+  
+  #pulseaudio.muted {
+      color: #bf616a;
+  }
+  
+  #temperature {
+      color: #8fbcbb;
+  }
+  
+  #temperature.critical {
+      color: #bf616a;
+  } */
