--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -46,12 +46,8 @@
     border: 0;
     padding: 0 0;
     font-family: CaskaydiaCoveNerdFont;
-    /* font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
-    /* font-family: "Hack Nerd Font"; */
     font-size: 16px;
     font-weight: bold;
-    /* padding-bottom:4px;
-      padding-top: 4px; */
     transition: all 0.5s ease;
 }
 
@@ -301,9 +297,13 @@ window#waybar {
     margin: 8px 10px;
     border-radius: 10px;
 }
+#tray menu menuitem{
+  background-color: @base;
+}
 
-#custom-launcher,
-#custom-power {}
+#custom-mail {
+    margin: 10px 10px;
+}
 
 #custom-launcher {
     color: @mauve;
