--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -13,6 +13,7 @@
     border-radius: 4px;
     font-family: "SF Pro Display Bold";
     font-size: 16px;
+    font-weight: bold;
     transition: all 0.5s ease;
 }
 
